--- a/final/.env
+++ b/final/.env
@@ -1,4 +1,4 @@
-POSTGRES_USER=francozapata
-POSTGRES_PASSWORD=123franco123
-POSTGRES_DB=finalComputacionII
-FLASK_SECRET_KEY=123franco123
+POSTGRES_USER=user
+POSTGRES_PASSWORD=password
+POSTGRES_DB=database
+FLASK_SECRET_KEY=secretkey
